--- a/Entrepaginas/src/main/resources/application.properties
+++ b/Entrepaginas/src/main/resources/application.properties
@@ -14,8 +14,8 @@ spring.jpa.open-in-view=false
 # File Upload Configuration
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-file.upload-dir=src/main/resources/static/uploads/
-file.upload-dir-libros=src/main/resources/static/uploads/libros/
+file.upload-dir=c:/Users/aleja/Downloads/IMAGENESPROYECTO/
+file.upload-dir-libros=c:/Users/aleja/Downloads/IMAGENESPROYECTO/libros/
 
 # Static Resources Configuration
 spring.web.resources.static-locations=classpath:/static/
