--- a/Entrepaginas/src/main/resources/application.properties
+++ b/Entrepaginas/src/main/resources/application.properties
@@ -36,3 +36,7 @@ logging.level.com.example.Entrepaginas=DEBUG
 
 # Security Configuration
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+# RENIEC API Configuration
+reniec.api.url=https://api.decolecta.com/v1/reniec/dni?numero=
+reniec.api.token=sk_11263.Pj0eJHUG64H6bQaeOzl416OjaZVfABiY
